--- a/Real website/Html/standard format/embêr.css
+++ b/Real website/Html/standard format/embêr.css
@@ -150,6 +150,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: top;
     font-family: 'Playfair Display';
     font-weight: 150;
     font-size: 1500%;
@@ -161,33 +162,13 @@ body {
     z-index: 9;
     -webkit-transition: transform 2s ease-in-out;
     opacity: 0; 
-    transform: translateY(50px); 
+    transition: transform 2s ease-in-out;
     animation: go-up 1s forwards;
 }
-.undername {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-family: 'Playfair Display';
-    width: 1000px;
-    font-weight: 150;
-    font-size: 300%;
-    letter-spacing: 3px;
-    text-shadow: 4px 3px 5px #000000; 
-    color: rgb(255, 255, 255);
-    user-select: none;
-    position: relative;
-    z-index: 9;
-    -webkit-transition: transform 2s ease-in-out;
-    opacity: 0; 
-    transform: translateY(50px); 
-    animation: go-up 1s forwards;
 
 
-}
 
-
-.name { animation-delay: .3s; }
+.name { animation-delay: 0s; }
 .undername {animation-delay: .3s;}
 
 
@@ -208,7 +189,7 @@ body {
     flex-direction: row;
     justify-content: center;
     font-family: 'Playfair Display';
-    width: 1000px;
+    width: 100%;
     font-weight: 150;
     font-size: 300%;
     letter-spacing: 3px;
@@ -224,6 +205,9 @@ body {
 
 }
 
+.name-container {
+    z-index: 9;
+}
 
 .subtitle {
     display: flex;
